# arsnova-overlay

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.cmake  Info.plist  README.md  downloadpage-index.html.cmake  sonar.properties.cmake  valgrind.supp  version.h.cmake
downloadpage/: CMakeLists.txt  style.css
src/: CMakeLists.txt  abstractconnection.cpp  abstractconnection.h  audiencequestioncountresponse.cpp  audiencequestioncountresponse.h  doxygenpages.h  feedbackresponse.cpp  feedbackresponse.h  httpconnection.cpp  httpconnection.h  interposedquestion.cpp  interposedquestion.h  loggedinresponse.cpp  loggedinresponse.h  main.cpp  main.m  qrcodegenerator.cpp  qrcodegenerator.h  sessioncontext.cpp  sessioncontext.h  sessionresponse.cpp  sessionresponse.h  settings.cpp  settings.h  svglogo.cpp  svglogo.h  understandingresponse.cpp  understandingresponse.h  updatetimer.cpp  updatetimer.h
src/qplugin/: arsnovawidgetcollection.cpp  arsnovawidgetcollection.h  bardiagramwidget.cpp  bardiagramwidget.h  bardiagramwidget.ui  bardiagramwidgetplugin.cpp  bardiagramwidgetplugin.h  emotediagramwidget.cpp  emotediagramwidget.h  emotediagramwidget.ui  emotediagramwidgetplugin.cpp  emotediagramwidgetplugin.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  loginwidgetplugin.cpp  loginwidgetplugin.h  logodiagramwidget.cpp  logodiagramwidget.h  logodiagramwidgetplugin.cpp  logodiagramwidgetplugin.h  sessioninformationwidget.cpp  sessioninformationwidget.h  sessioninformationwidget.ui  sessioninformationwidgetplugin.cpp  sessioninformationwidgetplugin.h
src/resources/: arsnovaoverlay.desktop  arsnovaoverlayicon.rc  arsnovawidget.desktop  arsnovawidgeticon.rc  resources.qrc
src/resources/images/: arsnovaoverlay.icns  arsnovawidget.icns
src/resources/ui/: bardiagram.qml  login.qml  sessioninformation.qml  sessionlist.qml
src/ui/: bardiagramwidget.cpp  emotediagramwidget.ui  infodialog.cpp  infodialog.h  infodialog.ui  loginwidget.cpp  loginwidget.h  logodiagramwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaywidget.cpp  overlaywidget.h  overlaywidget.ui  qrcodewidget.cpp  qrcodewidget.h  qrcodewidget.ui  sessioninformationwidget.cpp  sessionlistwidget.cpp  sessionlistwidget.h  sessionwidget.cpp  sessionwidget.h  sessionwidget.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  splashscreen.cpp  splashscreen.h  systemtrayicon.cpp  systemtrayicon.h
test/: CMakeLists.txt  main.cpp  svglogotest.h
tests/: CMakeLists.txt  feedbackresponsetest.cpp  feedbackresponsetest.h  main.cpp  sessioncontexttest.cpp  sessioncontexttest.h  stubconnection.cpp  stubconnection.h  svglogotest.cpp  svglogotest.h
tests/qplugin/: bardiagramwidgettest.cpp  bardiagramwidgettest.h  emotediagramwidgettest.cpp  emotediagramwidgettest.h  loginwidgettest.cpp  loginwidgettest.h  logodiagramwidgettest.cpp  logodiagramwidgettest.h  sessioninformationwidgettest.cpp  sessioninformationwidgettest.h
tests/ui/: bardiagramwidgettest.h  emotediagramwidgettest.h  loginwidgettest.cpp  loginwidgettest.h  logodiagramwidgettest.cpp  logodiagramwidgettest.h  mainwindowtest.cpp  mainwindowtest.h  overlaywidgettest.cpp  overlaywidgettest.h  qrcodewidgettest.cpp  qrcodewidgettest.h  sessioninformationwidgettest.cpp  sessioninformationwidgettest.h  sessionwidgettest.cpp  sessionwidgettest.h  splashscreentest.cpp  splashscreentest.h  systemtrayicontest.cpp  systemtrayicontest.h
